Adds detection for MobiIoT, Smooth Mobile brands and improves detection for CORN, Evertek, Hi, iPro, ONN, RCA Tablets, Sky, Vivo, Wiko, ZTE brands (#6935)
* Adds detection for MobiIoT brand and MobiIoT MobiPrint 4 Plus
* Adds detection for Sky Platinum H5 and Sky Platinum J5
* Adds detection for Smooth Mobile brand and Smooth 5.0, Smooth 5.5, Smooth 6.5, Smooth 6.26 Lite, Smooth 6.26 devices
* Adds detection for DISH brand and DISH Celero 5G
* Improves detection for Wiko Y62
* Adds detection for Wiko Power U30
* Improves detection for Wiko Y61
* Adds detection for Wiko View 5 Plus
* Adds detection for iPro Opal 4S
* Adds detection for OpelMobile SmartX1 4G
* Adds detection for Hi Boost Ultra
* Adds detection for Sky Elite P55
* Adds detection for Sky Elite H55
* Adds detection for Sky Elite C5 and Elite P5
* Improves detection for RCA Tablets Atlas 10.0"
* Adds detection for ONN TBBVNC100005208
* Adds detection for CORN R40
* Adds detection for CORN R10
* Adds detection for CORN X4, X5, X55
* Adds detection for Evertek V5 Nano
* Adds detection for ZTE Blade A7s (2020)
* Adds detection for ZTE Blade A30, Blade A51, Blade A3 (2020), Blade A5 (2020), Blade A3, Blade A320
* Adds detection for Vivo Y76 5G, Y33, Y20T, Y15s, X70 5G, improves detection for Vivo Y20 (2021), Y20A, Y12s and sort regex

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3338,7 +3338,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V2085A|V202[0345]C?A|V202[2-9]|V205[479]A|V203[0235-89]|V2031[E]?A?|V203[46]A|V2036_21|V204[013]|V204[6789]A|V205[0458]|V206[015689]|V20(?:6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V2118A|V2045|V2031_21|V2043_21|V213[346]A|V214[1358]A|I1928|V21[12]1A|V2106A|V2109|V211[01]|V2123A|V2026_21|V210[25]|V205[239])(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(01A0|13B[AT])|1819|I(?:192[78]|2012)|V(?:2006|202[2-9]|203[0-35-9]|204[0-3568]|205[02-5789]|206[015689]|2070|210[12459]|211[01]|212[049])|V(?:2026|2031|2036|2043)_21|V1936AL|V(?:1732|1809|181[3468]|182[149]|183[1268]|1901|191[13469]|192[1-48]|193[0246]|194[15]|195[05]|196[235]|198[16]|1990|200[125]|201[12]|202[03-5]|203[146]|204[6789]|205[45679]|2066B|206[1568]|207[23]|208[05]|2099|2106|211[18]|212[13]|213[346]|214[1358])A|V1824BA|V(?:1731|1818|2020)CA|V(?:1818|1938)CT|V(?:1730|2031)EA|V(?:1732|1809|181[3468]|182[19]|183[1268]|1901|1913|1938)T|X50 Pro\+)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3545,6 +3545,8 @@ Vivo:
       model: 'X70 Pro+'
     - regex: 'V2133A(?:[);/ ]|$)'
       model: 'X70'
+    - regex: 'V2104(?:[);/ ]|$)'
+      model: 'X70 5G'
     - regex: 'X([0-9])Plus(?: A)?(?:[);/ ]|$)'
       model: 'X$1 Plus'
     - regex: 'vivo Xplay6(?:[);/ ]|$)'
@@ -3563,18 +3565,22 @@ Vivo:
       model: 'Y12i'
     - regex: 'vivo 1901(?:[);/ ]|$)'
       model: 'Y15'
+    - regex: 'V2120(?:[);/ ]|$)'
+      model: 'Y15s'
     - regex: 'vivo 1915(?:[);/ ]|$)'
       model: 'Y19'
     - regex: 'V202[79](?:[);/ ]|$)'
       model: 'Y20'
     - regex: 'vivo 1613(?:[);/ ]|$)'
       model: 'Y25'
-    - regex: 'V2043_21(?:[);/ ]|$)'
+    - regex: '(?:V2043_21|V2048)(?:[);/ ]|$)'
       model: 'Y20 (2021)'
-    - regex: 'V205[24](?:[);/ ]|$)'
+    - regex: '(?:V205[24]|V2070|V2101)(?:[);/ ]|$)'
       model: 'Y20A'
     - regex: 'V2037(?:[);/ ]|$)'
       model: 'Y20G'
+    - regex: 'V2129(?:[);/ ]|$)'
+      model: 'Y20T'
     - regex: 'V2065(?:[);/ ]|$)'
       model: 'Y20G (2021)'
     - regex: 'V2028(?:[);/ ]|$)'
@@ -3607,6 +3613,8 @@ Vivo:
       model: 'Y31'
     - regex: 'V2068A?(?:[);/ ]|$)'
       model: 'Y31s'
+    - regex: 'V2057(?:[);/ ]|$)'
+      model: 'Y33'
     - regex: 'V2109(?:[);/ ]|$)'
       model: 'Y33s'
     - regex: 'V1934A(?:[);/ ]|$)'
@@ -3653,6 +3661,8 @@ Vivo:
       model: 'Y73 (2021)'
     - regex: 'V2031A(?:[);/ ]|$)'
       model: 'Y73s'
+    - regex: 'V2124(?:[);/ ]|$)'
+      model: 'Y76 5G'
     - regex: 'V1913[AT](?:[);/ ]|$)'
       model: 'Y7s'
     - regex: 'vivo 180([38]|8i)(?:[);/ ]|$)'
@@ -3675,7 +3685,7 @@ Vivo:
       model: 'Y91i'
     - regex: 'V1945A(?:[);/ ]|$)'
       model: 'Y9s'
-    - regex: '(?:V2026|V2033)(?:[);/ ]|$)'
+    - regex: '(?:V2026|V2033|V2042)(?:[);/ ]|$)'
       model: 'Y12s'
     - regex: '(?:V20[63]9|V2026_21)(?:[);/ ]|$)'
       model: 'Y12s (2021)'
@@ -4869,11 +4879,13 @@ Clarmin:
 
 # CORN (corn-mobile.com)
 CORN:
-  regex: 'CORN '
+  regex: 'CORN[_ ]'
   device: 'smartphone'
   models:
-    - regex: 'CORN R20'
-      model: 'R20'
+    - regex: 'CORN R([124])0'
+      model: 'R$10'
+    - regex: 'CORN[_ ]X(4|55|5)'
+      model: 'X$1'
 
 # Cosmote (https://www.telekom.ro/)
 Cosmote:
@@ -6489,12 +6501,14 @@ Storex:
 
 # Evertek
 Evertek:
-  regex: '(Ever(?:Glory|Shine|Miracle|Mellow|Classic|Trendy|Fancy|Vivid|Slim|Glow|Magic|Smart|Star)[^/;]*) Build|E70[25]0HD|E805[01]HD|E9054HD|E8050HG|E7914HG'
+  regex: '(Ever(?:Glory|Shine|Miracle|Mellow|Classic|Trendy|Fancy|Vivid|Slim|Glow|Magic|Smart|Star)[^/;]*) Build|E70[25]0HD|E805[01]HD|E9054HD|E8050HG|E7914HG|V5_Nano'
   device: 'smartphone'
   models:
     - regex: '(E70[25]0HD|E805[01]HD|E9054HD|E8050HG|E7914HG)'
       device: 'tablet'
       model: 'Everpad $1'
+    - regex: 'V5_Nano'
+      model: 'V5 Nano'
     - regex: '(Ever(?:Glory|Shine|Miracle|Mellow|Classic|Trendy|Fancy|Vivid|Slim|Glow|Magic|Smart|Star)[^/;]*) Build'
       model: '$1'
 
@@ -8755,7 +8769,7 @@ iNew:
 
 # iPro
 iPro:
-  regex: '(?:Kylin[ _]5.[05]S?|KYLIN40|Jade[78]s|Amber[67]S?|Amber5S_Pro|Phonenix50S|Zafiro|I9355A)(?:[);/ ]|$)'
+  regex: '(?:Kylin[ _]5.[05]S?|KYLIN40|Jade[78]s|Amber[67]S?|Amber5S_Pro|Phonenix50S|Zafiro|I9355A|Opal 4S)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Kylin_5.0S'
@@ -8764,6 +8778,8 @@ iPro:
       model: 'Kylin $1'
     - regex: 'KYLIN40'
       model: 'Kylin 40'
+    - regex: 'Opal 4S'
+      model: 'Opal 4S'
     - regex: 'Jade([78])s'
       model: 'Jade $1s'
     - regex: 'Amber7S'
@@ -12074,6 +12090,14 @@ Mobistel:
   device: 'smartphone'
   model: '$1'
 
+# MobiIoT (https://mobi-iot.com/)
+MobiIoT:
+  regex: 'MobiPrint 4\+(?:[);/ ]|$)'
+  device: 'peripheral'
+  models:
+    - regex: 'MobiPrint 4\+(?:[);/ ]|$)'
+      model: 'MobiPrint 4 Plus'
+
 # Mecool
 Mecool:
   regex: '(?:KM9PRO|BB2 PRO|K[I]{1,3} PRO|KI PLUS|KM9_TV_BOX|M8SPROW|M8S (?:PLUS|PRO) (?:DVB|[LW]|PLUS)|M8S (?:MAX|PRO))(?:[);/ ]|$)'
@@ -14417,7 +14441,7 @@ ProScan:
 
 # RCA Tablets (RCA)
 'RCA Tablets':
-  regex: 'RCT([^;/]+) Build|RCA RLTP4028|RCT6613W23P|RCT6513W87|RCT6973W43(?:MD)?|RCT6703W12|RCT(?:6A06P22|6603W47M7|6303W87(?:DK|M)|6773W22B|6203W46L|6873W42M|6K03W13)'
+  regex: 'RCT([^;/]+) Build|RCA RLTP4028|RCT6B06P23|RCT6613W23P|RCT6513W87|RCT6973W43(?:MD)?|RCT6703W12|RCT(?:6A06P22|6603W47M7|6303W87(?:DK|M)|6773W22B|6203W46L|6873W42M|6K03W13)'
   device: 'smartphone'
   models:
     - regex: 'RCA RLTP4028'
@@ -14434,7 +14458,7 @@ ProScan:
     - regex: 'RCT6773W22B'
       device: 'tablet'
       model: 'Voyager II 7.0"'
-    - regex: 'RCT6703W12'
+    - regex: 'RCT6703W12|RCT6B06P23'
       device: 'tablet'
       model: 'Atlas 10.0"'
     - regex: 'RCT6203W46L'
@@ -15994,7 +16018,7 @@ Senwa:
 
 # Sky or Sky Devices (skydevices.com)
 Sky:
-  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite[ _](?:E55|5_0T|M45|[45]T|45T|GO|M5Plus|T55|T[46]|[AB]5|5_5_Octa|[BC]55)|Platinum[_ ](?:5.0M|5\.5C|[56]\.[05]\+?|M5|[ABCM]4|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|VIEW2|O|4\.0|4_0Plus)|PLATINUMVIEW|SKY[ _](?:55M|Pro_III)|SKYVISION|SKY Black'
+  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite[ _](?:5_0T|M45|[45]T|45T|GO|M5Plus|T[46]|[ABCP]5|5_5_Octa|[BCEHPT]55)|Platinum[_ ](?:5.0M|5\.5C|[56]\.[05]\+?|[HJM]5|[ABCM]4|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|VIEW2|O|4\.0|4_0Plus)|PLATINUMVIEW|SKY[ _](?:55M|Pro_III)|SKYVISION|SKY Black'
   device: 'smartphone'
   models:
     - regex: 'Platinum[_ ](?:5\.0M|M5)'
@@ -16009,7 +16033,7 @@ Sky:
       model: 'Platinum 4.0'
     - regex: 'Platinum[_ ](P9) Pro(?:[);/ ]|$)'
       model: 'Platinum $1 Pro'
-    - regex: 'Platinum[_ ]([ABCM]4|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|O|6\.0)(?:[);/ ]|$)'
+    - regex: 'Platinum[_ ]([ABCM]4|[HJ]5|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|O|6\.0)(?:[);/ ]|$)'
       model: 'Platinum $1'
     - regex: 'Platinum[_ ]?VIEW(2)?(?:[);/ ]|$)'
       device: 'tablet'
@@ -16021,7 +16045,7 @@ Sky:
       model: 'Elite 5.5 Octa'
     - regex: 'Elite M5Plus'
       model: 'Elite M5 Plus'
-    - regex: 'Elite[ _](M45|Go|[45]T|T[46]|T55|[AB]5|[ABCE]55|45T)(?:[);/ ]|$)'
+    - regex: 'Elite[ _](M45|Go|[45]T|T[46]|[ABCP]5|[ABCEHPT]55|45T)(?:[);/ ]|$)'
       model: 'Elite $1'
     - regex: 'Elite[_ ]([3-7])[\._]([05](?:[A-Z]{1,2})?\+?)'
       model: 'Elite $1.$2'
@@ -18266,7 +18290,7 @@ Ulefone:
 
 # UMIDIGI or UMI
 UMIDIGI:
-  regex: 'UMI(?:DIGI)?[ _]|(?:A5_Pro|.+; A[79] Pro|ROME[_ ]X|BISON|hammer_S|S2 LITE|London|Z2_PRO|C NOTE 2|A11 Pro Max|Power 3|Android 10.+ (?:A3[SX]|A7S)|RP01)(?:[;/) ]|$)'
+  regex: 'UMI(?:DIGI)?[ _]|(?:A5_Pro|.+; A[79] Pro|ROME[_ ]X|BISON|hammer_S|S2 LITE|London|Z2_PRO|C NOTE 2|A11 Pro Max|Power 3|Android 10.+ (?:A3[SX]|A7S(?! 2020))|RP01)(?:[;/) ]|$)'
   device: 'smartphone'
   models:
     - regex: '(A[579]|Z2)[_ ]Pro'
@@ -18983,13 +19007,15 @@ Wink:
 
 # Wiko (wikomobile.com)
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna|lPlus)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?! Plus)(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 (?:Go|Plus)|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V745|V8[30]0|P[36]11|K420|K510S?|K560|K130|K380|K610|K211)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|T[HV])|WIM Lite|W-V851|W-K360-TV|W-V6[08]0|W-V750BN|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913|U614AS'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna|lPlus)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?! Plus)(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 (?:Go|Plus)|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V745|V755|V8[035]0|P[36]11|K130|K211|K3[68]0|K420|K510S?|K560|K610)-(?:BYT|EEA|FRA|OPE|SUN|SWI|TIM|TMV|TVM|DU|T[HV])|WIM Lite|W-V851|W-V6[08]0|W-V750BN|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913|U614AS'
   device: 'smartphone'
   models:
     - regex: '(?:WIKO-)?W-V745'
       model: 'Power U10'
     - regex: '(?:WIKO-)?W-V750'
       model: 'Power U20'
+    - regex: '(?:WIKO-)?W-V755-EEA'
+      model: 'Power U30'
     - regex: '(?:WIKO-)?Cink Peax 2'
       model: 'Cink Peax 2'
     - regex: '(?:Wiko-)?Cink([^/;]*) Build'
@@ -19154,6 +19180,8 @@ Wiko:
       model: 'View 3 Lite'
     - regex: 'W-V851'
       model: 'View 5'
+    - regex: 'W-V850-EEA'
+      model: 'View 5 Plus'
     - regex: 'W-K130-(?:OPE|EEA)'
       model: 'Y50'
     - regex: 'W-K420-EEA'
@@ -19162,7 +19190,7 @@ Wiko:
       model: 'Y51'
     - regex: 'W-K510-(?:TVM|EEA|OPE|SUN|BYT|TH)|W-K510S-SWI'
       model: 'Y60'
-    - regex: 'W-K560-EEA'
+    - regex: 'W-K560-(?:EEA|TVM)'
       model: 'Y61'
     - regex: 'W-K610'
       model: 'Y62'
@@ -20576,7 +20604,7 @@ Rakuten:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:E01|V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A00[13]ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZTG01|K8[37]CA|VERGATARIO ?5(?:PLUS)?|Axon mini|KIS C341)(?:[);/ ]|$)'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade[ _](?:E01|V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|320|460|465|475|510|520|530|602|51|30|3)|V580|V Ultra|Q Lux)|N9[15]8St|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A[357] 2019-T|A[35] 2020-T|A7S 2020-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A00[13]ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZTG01|K8[37]CA|VERGATARIO ?5(?:PLUS)?|Axon mini|KIS C341)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -20592,7 +20620,7 @@ ZTE:
       model: 'A1'
     - regex: 'ZTE T221(?:[);/ ]|$)'
       model: 'Blade AF3'
-    - regex: 'A7020(?:RU)?(?:[);/ ]|$)'
+    - regex: '(?:A7020(?:RU)?|Blade A7S 2020-T)(?:[);/ ]|$)'
       model: 'Blade A7s (2020)'
     - regex: 'A7000(?:[);/ ]|$)'
       model: 'Blade A7 (2020)'
@@ -20720,7 +20748,7 @@ ZTE:
       model: 'Optus X Start'
     - regex: 'BA520(?:[);/ ]|$)'
       model: 'Blade A520'
-    - regex: 'Blade (A(0620|3[13]0|321|452|460|462|465|475|510|512|52[012]C?|530|531|60[12]|612|[69]10C?)|L[12]10|L130|V0730|V0800|V580|V1000|E01)(?:[);/ ]|$)'
+    - regex: 'Blade[_ ](A(0620|3[13]0|321|452|460|462|465|475|510|512|52[012]C?|530|531|60[12]|612|[69]10C?)|L[12]10|L130|V0730|V0800|V580|V1000|E01)(?:[);/ ]|$)'
       model: 'Blade $1'
     - regex: 'Blade L2 Plus(?:[);/ ]|$)'
       model: 'Blade L2 Plus'
@@ -20748,6 +20776,8 @@ ZTE:
       model: 'Blade A$1 ($2)'
     - regex: 'ZTE BV0720(?:[);/ ]|$)'
       model: 'Blade A2'
+    - regex: 'Blade A[35] 2020-T(?:[);/ ]|$)'
+      model: 'Blade A$1 (2020)'
     - regex: 'ZTE C880A(?:[);/ ]|$)'
       model: 'Blade A1'
     - regex: 'Blade A([35]1?) Lite'
@@ -20804,7 +20834,7 @@ ZTE:
       model: 'Blade V8 Lite'
     - regex: 'BLADE V0850(?:[);/ ]|$)'
       model: 'Blade V8 Mini'
-    - regex: '(?:Blade[ _])?(Apex2|G (LTE|Lux)|Vec|A510)'
+    - regex: '(?:Blade[ _])?(Apex2|G (LTE|Lux)|Vec|A(320|510|51|30|3))'
       model: 'Blade $1'
     - regex: 'Z768G(?:[);/ ]|$)'
       model: 'Midnight'
@@ -21356,6 +21386,14 @@ BDF:
       model: '$1'
     - regex: 'K960N_MT(6580|6753)(_32_N)?(?:[);/ ]|$)'
       model: 'BK960N MT$1'
+
+# Hi (https://www.hi-online.co.za/)
+Hi:
+  regex: 'Boost Ultra(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Boost Ultra(?:[);/ ]|$)'
+      model: 'Boost Ultra'
 
 # Highscreen
 Highscreen:
@@ -22049,7 +22087,7 @@ NEXON:
 
 # ONN (walmart)
 ONN:
-  regex: '(ONA19TB00[327]|10000520[6-9]|O8HD|100026191|100011886|100003561|100011885|100015685-A|TBBVNC100005207)(?:[);/ ]|$)'
+  regex: '(ONA19TB00[327]|10000520[6-9]|O8HD|100026191|100011886|100003561|100011885|100015685-A|TBBVNC10000520[78])(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
@@ -24169,9 +24207,13 @@ Fortis:
 
 # OpelMobile (opelmobile.com.au)
 OpelMobile:
-  regex: ' OpelMobile_(SmartJX)(?:[);/ ]|$)'
+  regex: ' OpelMobile_Smart(?:JX|X1)(?:[);/ ]|$)'
   device: 'smartphone'
-  model: '$1'
+  models:
+    - regex: 'OpelMobile_SmartJX'
+      model: 'SmartJX'
+    - regex: 'OpelMobile_SmartX1'
+      model: 'SmartX1 4G'
 
 # NuAns
 NuAns:
@@ -25639,6 +25681,18 @@ Tambo:
   device: 'smartphone'
   model: '$1'
 
+# Smooth Mobile (https://www.smoothmobile.us/)
+Smooth Mobile:
+  regex: 'Smooth ?(?:5.[05]|626|6.26 Lite|6.5)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Smooth (5.[05]|6.5)(?:[);/ ]|$)'
+      model: 'Smooth $1'
+    - regex: 'Smooth626(?:[);/ ]|$)'
+      model: 'Smooth 6.26'
+    - regex: 'Smooth 6.26 Lite(?:[);/ ]|$)'
+      model: 'Smooth 6.26 Lite'
+
 # Smotreshka
 Smotreshka:
   regex: 'Smotreshka Box (115NA|413NA|213a?)(?:[);/ ]|$)'
@@ -25744,6 +25798,14 @@ DIGIFORS:
   regex: 'DIGIFORS (400)(?:[);/ ]|$)'
   device: 'tv'
   model: 'Smart $1'
+
+# DISH (https://www.dish.com/)
+DISH:
+  regex: 'WTCELERO5G(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'WTCELERO5G'
+      model: 'Celero 5G'
 
 # VIWA
 VIWA:
