--- a/Tests/fixtures/peripheral.yml
+++ b/Tests/fixtures/peripheral.yml
@@ -336,3 +336,21 @@
     model: DT50
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; MobiPrint 4+ Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.186 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 74.0.3729.186
+    engine: Blink
+    engine_version: ""
+  device:
+    type: peripheral
+    brand: MobiIoT
+    model: MobiPrint 4 Plus
+  os_family: Android
+  browser_family: Chrome
