Adds detection for T+ Browser
ref #6934

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -4121,3 +4121,21 @@
     engine: WebKit
     engine_version: "537.36"
     family: Chrome
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/44.0.2403.130 Safari/537.36 T+Browser/2.3.4.1
+  client:
+    type: browser
+    name: T+ Browser
+    version: 2.3.4.1
+    engine: Blink
+    engine_version: ""
+    family: Chrome
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.120 Safari/537.36 ChanjetCloud/77.1588.2.2
+  client:
+    type: browser
+    name: T+ Browser
+    version: 77.1588.2.2
+    engine: Blink
+    engine_version: ""
+    family: Chrome
