--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# T+ Browser (https://t.chanjet.com/tplus/view/login/downloadBrowser.html)
+- regex: '(?:ChanjetCloud|T\+Browser)/(\d+[\.\d]+)'
+  name: 'T+ Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Sushi Browser (https://sushi-browser.com/)
 - regex: 'SushiBrowser/(\d+[\.\d]+)'
   name: 'Sushi Browser'
