Adds detection for Coolpad Bellaza

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4808,7 +4808,7 @@ Condor:
 
 # Coolpad (coolpad.us)
 Coolpad:
-  regex: '(?:YL-)?Coolpad|(?:Cool_9S|1824-S0|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648AT?|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-(?:8|E0)|C106-[789]|C107-9| C106|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0|1826-I01|8298-(?:M02|A01)|5560S|CP3320AS2|CP3706AS|CP3669AS|C103)(?:[);/ ]|$)|(8295|5860S) Build'
+  regex: '(?:YL-)?Coolpad|(?:Cool_9S|1824-S0|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648AT?|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-(?:8|E0)|C106-[789]|C107-9| C106|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0|1826-I01|8298-(?:M02|A01)|5560S|CP3320AS2|CP3706AS|CP3669AS|CP3321AT|C103)(?:[);/ ]|$)|(8295|5860S) Build'
   device: 'smartphone'
   models:
     - regex: 'VCR-[AI]0'
@@ -4824,6 +4824,9 @@ Coolpad:
       model: 'N5'
     - regex: '1824-S0(?:[);/ ]|$)'
       model: 'N5C'
+    - regex: 'CP3321AT(?:[);/ ]|$)'
+      model: 'Bellaza'
+      device: 'feature phone'
     - regex: 'CP3705A[S]?(?:[);/ ]|$)'
       model: 'Legacy'
     - regex: 'CP3648AT?(?:[);/ ]|$)'
