Adds detection for Huavi KHATAR H-20 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7457,6 +7457,7 @@ Homtom:
       model: 'HT$1'
     - regex: 'Homtom ([^;/]+) Build'
       model: '$1'
+
 # Hosin
 Hosin:
   regex: 'HOSIN[ _-]'
@@ -7505,6 +7506,14 @@ Minix:
       model: 'NEO Z64'
     - regex: 'NEO-U9-H(?:[);/ ]|$)'
       model: 'NEO U9H'
+
+# Huavi (https://www.huavi.us/)
+Huavi:
+  regex: 'KHATAR H-20 PRO(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'KHATAR H-20 PRO(?:[);/ ]|$)'
+      model: 'KHATAR H-20 Pro'
 
 # Huawei
 Huawei:
