Adds detection for Cricket Ovation 2, Dream 5G, Icon 3, Splendor, Innovate 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4903,15 +4903,25 @@ Cosmote:
 
 # Cricket
 Cricket:
-  regex: 'Cricket-([a-z0-9]+)|(?:U325AC|U705AC|V350C)(?:[);/ ]|$)'
+  regex: 'Cricket-([a-z0-9]+)|(?:U325AC|U705AC|V350C|EC1002|EC21100[1-4])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: 'EC211001'
+      model: 'Dream 5G'
     - regex: 'U325AC'
       model: 'Icon 2'
-    - regex: 'U705AC'
-      model: 'Ovation'
+    - regex: 'EC211002'
+      model: 'Icon 3'
     - regex: 'V350C'
       model: 'Influence'
+    - regex: 'EC211004'
+      model: 'Innovate 5G'
+    - regex: 'U705AC'
+      model: 'Ovation'
+    - regex: 'EC1002'
+      model: 'Ovation 2'
+    - regex: 'EC211003'
+      model: 'Splendor'
     - regex: 'Cricket-([a-z0-9]+)'
       device: 'feature phone'
       model: '$1'
