--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -12488,3 +12488,21 @@
     model: Innovate 5G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; AMICO_SMARTPHONE_4G Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/58.0.3029.125 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 58.0.3029.125
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Brondi
+    model: Amico Smartphone 4G
+  os_family: Android
+  browser_family: Chrome
