Adds detection for Mafe brand and Mafe Shine M820

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22361,6 +22361,14 @@ Prixton:
     - regex: '(T7012Q)(?:[);/ ]|$)'
       model: '$1'
 
+# Mafe
+Mafe:
+  regex: 'Mafe_M820(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Mafe_M820'
+      model: 'Shine M820'
+
 # Magnus or Magnus Telecom
 Magnus:
   regex: 'Magnus[ _](?:bravoZ[23]0|Infinity_?(?:G8|G11))(?:[);/ ]|$)'
