--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -12506,3 +12506,21 @@
     model: Amico Smartphone 4G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; Mafe_M820 Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.116 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 60.0.3112.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Mafe
+    model: Shine M820
+  os_family: Android
+  browser_family: Chrome
