Adds detection for Cricket Icon

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4907,11 +4907,13 @@ Cosmote:
 
 # Cricket
 Cricket:
-  regex: 'Cricket-([a-z0-9]+)|(?:U325AC|U705AC|V350C|EC1002|EC21100[1-4])(?:[);/ ]|$)'
+  regex: 'Cricket-([a-z0-9]+)|(?:U304AC|U325AC|U705AC|V350C|EC1002|EC21100[1-4])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'EC211001'
       model: 'Dream 5G'
+    - regex: 'U304AC'
+      model: 'Icon'
     - regex: 'U325AC'
       model: 'Icon 2'
     - regex: 'EC211002'
