Adds detection for SPC Lightyear

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24058,7 +24058,7 @@ Spark:
 
 # SPC or SPC Universe or SPC Mobile (spc.es)
 SPC:
-  regex: '(?:Gravity Max|GRAVITY 2|GRAVITY_OCTACORE|SPC SMART LITE|SPC_ALIEN(?:_STICK)?|SPC Glow9.7)(?:[);/ ]|$)'
+  regex: '(?:Gravity Max|GRAVITY 2|GRAVITY_OCTACORE|SPC SMART LITE|SPC_ALIEN(?:_STICK)?|SPC Glow9.7|Lightyear)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'GRAVITY_OCTACORE'
@@ -24069,6 +24069,8 @@ SPC:
       model: 'Gravity 2'
     - regex: 'SPC Glow9.7'
       model: 'Glow 9.7"'
+    - regex: 'Lightyear'
+      model: 'Lightyear'
 
     - regex: 'SPC SMART LITE'
       device: 'smartphone'
