Adds detection for Naomi Phone Dammar

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24996,9 +24996,13 @@ Datalogic:
 
 # Naomi Phone
 Naomi Phone:
-  regex: 'NAOMIPHONE Ambar(?:[);/ ]|$)'
+  regex: '(?:NAOMIPHONE Ambar|DAMMAR)(?:[);/ ]|$)'
   device: 'smartphone'
-  model: 'Ambar'
+  models:
+    - regex: 'NAOMIPHONE Ambar(?:[);/ ]|$)'
+      model: 'Ambar'
+    - regex: 'DAMMAR(?:[);/ ]|$)'
+      model: 'Dammar'
 
 # Navitel (navitel.ru)
 Navitel:
