Adds detection for Konrow Sky 55

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11357,7 +11357,7 @@ Konka:
 
 # Konrow (konrow.com)
 Konrow:
-  regex: '(?:BIGCOOL|COOLFIVE|COOL-K|Just5|Link5|EASY(?:5|62)|CITY55|Cool55)(?:[);/ ]|$)'
+  regex: '(?:BIGCOOL|COOLFIVE|COOL-K|Just5|Link5|EASY(?:5|62)|CITY55|Cool55|SKY_55_EEA)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'BIGCOOL(?:[);/ ]|$)'
@@ -11376,6 +11376,8 @@ Konrow:
       model: 'Easy $1'
     - regex: 'CITY55(?:[);/ ]|$)'
       model: 'City 55'
+    - regex: 'SKY_55_EEA(?:[);/ ]|$)'
+      model: 'Sky 55'
 
 # Karbonn (karbonnmobiles.com)
 Karbonn:
