Adds detection for iHunt S60 Discovery Pro (2022)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8513,6 +8513,8 @@ iHunt:
       model: 'X300 Elite'
     - regex: 'S60_Discovery_2019'
       model: 'S60 Discovery (2019)'
+    - regex: 'S60 Discovery Pro 2022'
+      model: 'S60 Discovery Pro (2022)'
     - regex: 'AlienXLite2020'
       model: 'Alien X Lite (2020)'
     - regex: 'Alien X Lite PRO'
