Adds detection for iHunt S10 Tank Pro (2020)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8492,13 +8492,15 @@ iBerry:
 
 # iHunt
 iHunt:
-  regex: 'iHunt|One_ Love_|TITAN_P11000_PRO|Like_(3|4U|3_Pro)|X300 Elite|S10_Tank_2019|S60_Discovery_2019|AlienXLite2020|Alien X Lite|Alien_X|S[23]0 Ultra ApeX 2021|S21 Ultra 4G 2021|Like 11 Panda Pro'
+  regex: 'iHunt|One_ Love_|TITAN_P11000_PRO|Like_(3|4U|3_Pro)|X300 Elite|S10_Tank_2019|S10 Tank PRO 2020|S60_Discovery_2019|AlienXLite2020|Alien X Lite|Alien_X|S[23]0 Ultra ApeX 2021|S21 Ultra 4G 2021|Like 11 Panda Pro'
   device: 'smartphone'
   models:
     - regex: 'iHunt_Like'
       model: 'Like'
     - regex: 'S10_Tank_2019'
       model: 'S10 Tank (2019)'
+    - regex: 'S10 Tank PRO 2020'
+      model: 'S10 Tank Pro (2020)'
     - regex: 'One_ Love_'
       model: 'One Love'
     - regex: 'TITAN_P11000_PRO'
