Adds detection for Digicel DL755

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5336,6 +5336,8 @@ Digicel:
   regex: 'DIGICEL'
   device: 'smartphone'
   models:
+    - regex: 'DL755'
+      model: 'DL755'
     - regex: 'DL810'
       model: 'DL810'
     - regex: 'DIGICEL ([^/;]+) Build'
