Adds detection for iSWAG Kronos

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23921,8 +23921,8 @@ iSWAG:
   regex: 'ISWAG[ _]'
   device: 'smartphone'
   models:
-    - regex: 'ISWAG[_ ]VIPER'
-      model: 'Viper'
+    - regex: 'iSWAG[_ ]KRONOS'
+      model: 'Kronos'
     - regex: 'iSWAG[_ ]Lynx'
       model: 'Lynx'
     - regex: 'iSWAG[_ ]MANTRA'
@@ -23931,6 +23931,8 @@ iSWAG:
       model: 'Mega'
     - regex: 'iSWAG[_ ]NEMESIS'
       model: 'Nemesis'
+    - regex: 'ISWAG[_ ]VIPER'
+      model: 'Viper'
 
 # Reeder (reeder.com.tr)
 Reeder:
