Adds detection for Cloud Storm C3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23107,12 +23107,14 @@ Logic:
 
 # Cloud or Cloud TruConnect (www.cloudmobileusa.com)
 Cloud:
-  regex: '(?:Stratus_C5|Sunshine_T1|Cyclone_C4)(?:[);/ ]|$)'
+  regex: '(?:Cyclone_C4|Storm_C3|Stratus_C5|Sunshine_T1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(Sunshine_T1)'
       device: 'tablet'
       model: '$1'
+    - regex: 'Storm_C3'
+      model: 'Storm C3'
     - regex: '(Stratus_C5|Cyclone_C4)'
       model: '$1'
 
