Adds detection for Virzo brand and Virzo V608c

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22758,6 +22758,14 @@ Vipro:
     - regex: 'VIPRO PRO[ _-]?([0-9])(?:[);/ ]|$)'
       model: 'Pro $1'
 
+# Virzo (https://virzo.com/)
+Virzo:
+  regex: 'V608C(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'V608C(?:[);/ ]|$)'
+      model: 'V608c'
+
 # OzoneHD
 OzoneHD:
   regex: 'Ozone HD|OzoneHD[ _](T2 WiFi|4K(?: TV)?|Fun)(?:[);/ ]|$)'
