--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -12776,3 +12776,19 @@
     model: V608c
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10.0; CP3321AT Build/3321AT.210623.0S) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/45.0.2454.94 Mobile Crosswalk/11.45.2454.20160912 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: CrosswalkApp
+    version: 11.45.2454.20160912
+  device:
+    type: smartphone
+    brand: Coolpad
+    model: Bellaza
+  os_family: Android
+  browser_family: Unknown
