feat(device) detect new brand Soho Style: SS5214G feat(device) detect new brand UMIDIGI: S3 Pro feat(device) detect brand Zuum: Stellar P3 feat(device) detect brand Xiaomi: Qin 2, Qin 2 Pro feat(device) detect brand Smartab: ST7160 feat(device) detect brand Navitel: T505 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18349,10 +18349,10 @@ Ulefone:
 
 # UMIDIGI or UMI
 UMIDIGI:
-  regex: 'UMI(?:DIGI)?[ _]|(?:A5_Pro|.+; A[79] Pro|ROME[_ ]X|BISON|hammer_S|S2 LITE|London|Z2_PRO|C NOTE 2|A11 Pro Max|Power 3|Android 10.+ (?:A3[SX]|A7S(?! 2020))|RP01)(?:[;/) ]|$)'
+  regex: 'UMI(?:DIGI)?[ _]|(?:A[5]_Pro|.+; A[79] Pro|S3_Pro|ROME[_ ]X|BISON|hammer_S|S2 LITE|London|Z2_PRO|C NOTE 2|A11 Pro Max|Power 3|Android 10.+ (?:A3[SX]|A7S(?! 2020))|RP01)(?:[;/) ]|$)'
   device: 'smartphone'
   models:
-    - regex: '(A[579]|Z2)[_ ]Pro'
+    - regex: '(A[3579]|Z2|S3)[_ ]Pro'
       model: '$1 Pro'
     - regex: 'A11 Pro Max'
       model: 'A11 Pro Max'
@@ -19478,7 +19478,7 @@ Zopo:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?|pomelo)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|KSR|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[SEG]|HM2014819|WT88047|210611(?:8C|19BI)|M2004J(?:7[AB]|19)C|M2012K11(?:[CGI]|A[CI])|M2011K2[CG]|M2011J18C|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[CGYI]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GCR])|M2010J19S[CGYIL]|M1908C3JGG|M2102(?:K1AC|K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot|XIG02|21061119[AD]G|M2101K(?:7BL|9AI)|M2012K10C|M2104K10AC|21051182[CG]|21081111RG|2109119DG|2107113S[GR]|joyeuse|galahad|begonia| MDG1'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?|pomelo)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|KSR|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[SEG]|HM2014819|WT88047|210611(?:8C|19BI)|M2004J(?:7[AB]|19)C|M2012K11(?:[CGI]|A[CI])|M2011K2[CG]|M2011J18C|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[CGYI]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GCR])|M2010J19S[CGYIL]|M1908C3JGG|M2102(?:K1AC|K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|Qin 2(?: Pro)?|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot|XIG02|21061119[AD]G|M2101K(?:7BL|9AI)|M2012K10C|M2104K10AC|21051182[CG]|21081111RG|2109119DG|2107113S[GR]|joyeuse|galahad|begonia| MDG1'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -19674,6 +19674,12 @@ Xiaomi:
       model: 'Redmi 6 Pro'
     - regex: 'Redmi 4 Prime(?:[);/ ]|$)'
       model: 'Redmi 4 Prime'
+    - regex: 'Qin 2 Pro(?:[);/ ]|$)'
+      model: 'Qin 2 Pro'
+    - regex: 'Qin 2(?:[);/ ]|$)'
+      model: 'Qin 2'
+
+
       # specific tablet models
     - regex: '21051182[CG](?:[);/ ]|$)'
       model: 'Mi Pad 5'
@@ -21107,7 +21113,7 @@ Zuum:
       model: 'Stellar Pro'
     - regex: 'STELLAR PLUS'
       model: 'Stellar Plus'
-    - regex: 'STELLAR ([MP][12]|Z)'
+    - regex: 'STELLAR ([MP][123]|Z)'
       model: 'Stellar $1'
     - regex: 'STELLAR MINI'
       model: 'Stellar Mini'
@@ -25055,7 +25061,7 @@ Naomi Phone:
 
 # Navitel (navitel.ru)
 Navitel:
-  regex: 'NAVITEL[ _]|(?:T737PRO)(?:[);/ ]|$)'
+  regex: 'NAVITEL[ _]|(?:T737PRO|T505PRO)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'NAVITEL[ _](T70[07]) 3G(?:[);/ ]|$)'
@@ -25064,8 +25070,8 @@ Navitel:
       model: '$1 LTE'
     - regex: 'NAVITEL[ _](A73[0157]|A650)(?:[);/ ]|$)'
       model: '$1'
-    - regex: 'T737PRO(?:[);/ ]|$)'
-      model: 'T737 Pro'
+    - regex: 'T(505|737)PRO(?:[);/ ]|$)'
+      model: 'T$1 Pro'
     - regex: 'RE900 Full HD(?:[);/ ]|$)'  # combo device table/navigator and camera
       model: 'RE900 Full HD'
 
@@ -25077,7 +25083,7 @@ Linnex:
 
 # Smartab
 Smartab:
-  regex: '(ST1009)(?:[);/ ]|$)'
+  regex: '(ST1009|ST7160)(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
@@ -26294,6 +26300,12 @@ Erisson:
 Liberton:
   regex: '(24TP1HDTA1)(?:[);/ ]|$)'
   device: 'tv'
+  model: '$1'
+
+# Soho Style
+Soho Style:
+  regex: '(SS5214G)(?:[);/ ]|$)'
+  device: 'smartphone'
   model: '$1'
 
 # Meizu
