--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -6690,3 +6690,39 @@
     model: 101c Platinum
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; ST7160) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.166 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 92.0.4515.166
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Smartab
+    model: ST7160
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; T505PRO) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.114 Safari/537.36 OPR/64.3.3282.60839
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 64.3.3282.60839
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Navitel
+    model: T505 Pro
+  os_family: Android
+  browser_family: Opera
