Adds detection for Gtel brand and Gtel Infinity 8s

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7247,6 +7247,14 @@ Grundig:
     - regex: 'AFTEU011'
       model: 'Vision 6 HD (2019)'
 
+# Gtel (https://gtel.co.zw/)
+Gtel:
+  regex: 'Gtel'
+  device: 'smartphone'
+  models:
+    - regex: 'Infinity 8s'
+      model: 'Infinity 8s'
+
 # Hafury
 Hafury:
   regex: 'HAFURY'
